Skill system addition and some other changes